feat: initial middleware
