# src/resourceName/routes/resourceNameRouter.ts
@@ -1,17 +1,0 @@
-import { Router } from 'express';
-import { FactoryFunction } from 'tsyringe';
-import { ResourceNameController } from '../controllers/resourceNameController';
-
-const resourceNameRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
-  const router = Router();
-  const controller = dependencyContainer.resolve(ResourceNameController);
-
-  router.get('/', controller.getResource);
-  router.post('/', controller.createResource);
-
-  return router;
-};
-
-export const RESOURCE_NAME_ROUTER_SYMBOL = Symbol('resourceNameRouterFactory');
-
-export { resourceNameRouterFactory };
